log
Fri, Mar 21, 2025 11:15:00 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025 11:26:08 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
90ff85d
Fri, Mar 21, 2025 11:27:50 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ac13e87
Fri, Mar 21, 2025 11:32:51 AM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
ba051ed
Fri, Mar 21, 2025 11:35:15 AM: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
b500fcd
Fri, Mar 21, 2025 11:42:53 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  4|1
total_score: 50/70
14fb5a1
Fri, Mar 21, 2025  7:20:19 PM: 
 exercises.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:130:23: error: expected expression before 'List'
          if (get_size(List *)P == 0) {
                       ^~~~
exercises.c:130:30: error: expected ')' before 'P'
          if (get_size(List *)P == 0) {
                              ^
Compilation failed
be2dbff
Fri, Mar 21, 2025  7:21:05 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
24ce7c1
